ags/widget/bar/bar.scss
@use 'sass:color';

$bar-spacing: $spacing * .75;
$button-radius: $radius;

@mixin panel-button($flat: true, $reactive: false) {
    @include accs-button($flat, $reactive);

    >* {
        border-radius: $button-radius;
        margin: $bar-spacing;
    }

    label {
        font-weight: bold;
        font-size: 18px;
    }
    image {
        font-weight: bold;
        font-size: 20px;
    }

    >* {
        padding: $padding * 0.3 $padding * 0.1;
    }
}

.bar {
    background-color: $bg;

    .panel-button {
        @include panel-button;

        &:not(.flat) {
            @include accs-button($flat: false);
        }
    }

    .appkill,
    .launcher,
    .overview,
    .rotate,
    .wvctl {
        padding: 2px;

        image {
            font-weight: bold;
            font-size: 28px;
        }
    }

    .workspaces {
        button {
            font-size: 0;
            min-width: 16pt;
            min-height: 16pt;
            border-radius: $radius*.2;
            box-shadow: inset 0 0 0 $border-width $border-color;
            margin: 0 $padding * .2;
            transition: $transition* .5;
            background-color: transparentize($fg, .95);

            &.occupied {
                background-color: transparentize($fg, .90);
                min-width: 16pt;
                min-height: 16pt;
            }

            &.active {
                background-color: transparentize($primary-bg, .2);
                min-width: 16pt;
                min-height: 16pt;
            }
        }

        &:active {
            button {
                background-color: transparentize($primary-fg, .3);

                &.occupied {
                    background-color: transparentize($primary-fg, .95);
                }

                &.active {
                    background-color: $primary-fg;
                }
            }
        }
    }

    .media label {
        margin: 0 ($spacing * .5)
    }

    .taskbar .indicator.active {
        background-color: $primary-bg;
        border-radius: $radius;
        min-height: 1pt;
        min-width: 16pt;
        margin: 2pt;
    }

    .powermenu.colored,
    .recorder {
        image {
            color: transparentize($error-bg, 0.3);
        }

        &:hover image {
            color: transparentize($error-bg, 0.15);
        }

        &:active image {
            color: $primary-fg;
        }
    }

    .quicksettings>box>box {
        @include spacing($spacing: if($bar-spacing==0, $padding / 2, $bar-spacing));
    }

    .quicksettings:not(.active):not(:active) {
        .bluetooth {
            color: $primary-bg;

            label {
                font-size: $font-size * 1.2;
                color: $fg;
                text-shadow: $text-shadow;
            }
        }
    }

    .battery-bar {
        >* {
            padding: 0;
        }

        &.bar-hidden>box {
            padding: 0 $spacing * .5;

            image {
                margin: 0;
            }
        }

        levelbar * {
            all: unset;
            transition: $transition;
        }

        .whole {
            @if $shadows {
                image {
                    -gtk-icon-shadow: $text-shadow;
                }

                label {
                    text-shadow: $text-shadow;
                }
            }
        }

        .regular image {
            margin-left: $spacing * .5;
        }

        trough {
            @include widget;
            min-height: 12pt;
            min-width: 12pt;
        }

        .regular trough {
            margin-right: $spacing * .5;
        }

        block {
            margin: 0;

            &:last-child {
                border-radius: 0 $button-radius $button-radius 0;
            }

            &:first-child {
                border-radius: $button-radius 0 0 $button-radius;
            }
        }

        .vertical {
            block {
                &:last-child {
                    border-radius: 0 0 $button-radius $button-radius;
                }

                &:first-child {
                    border-radius: $button-radius $button-radius 0 0;
                }
            }

        }

        @for $i from 1 through $bar-battery-blocks {
            block:nth-child(#{$i}).filled {
                background-color: color.mix($bg, $primary-bg, $i*3)
            }

            &.low block:nth-child(#{$i}).filled {
                background-color: color.mix($bg, $error-bg, $i*3)
            }

            &.charging block:nth-child(#{$i}).filled {
                background-color: color.mix($bg, $charging-bg, $i*3)
            }

            &:active .regular block:nth-child(#{$i}).filled {
                background-color: color.mix($bg, $primary-fg, $i*3)
            }
        }

        &.low image {
            color: $error-bg
        }

        &.charging image {
            color: $charging-bg
        }

        &:active image {
            color: $primary-fg
        }
    }
}

